package com.gupao.study.enums;

/**
 * 项目的类型
 * @author rainly
 */
public enum ProjectType {
    /**
     * java项目
     */
    JavaProject,
    /**
     * python项目
     */
    PythonProject,
    /**
     * react项目
     */
    ReactProject,
    /**
     * angular项目
     */
    AngularProject,
    /**
     * vue项目
     */
    VueProject
}
